fix: fixed provider settings switch alignment

--- a/src/components/Forms/ProviderSettingsForm/ToggleDoubleInput/ToggleDoubleInput.scss
+++ b/src/components/Forms/ProviderSettingsForm/ToggleDoubleInput/ToggleDoubleInput.scss
@@ -18,12 +18,11 @@
 
   .icon {
     height: 16px;
-    margin-right: 10px;
+    margin-right: 5px;
     width: 16px;
   }
 
   .multiInputBox {
-    margin-left: 20px;
     width: 50%;
 
     .customInput {
