--- a/src/components/Forms/ProviderSettingsForm/ToggleTargetFields/ToggleTargetFields.scss
+++ b/src/components/Forms/ProviderSettingsForm/ToggleTargetFields/ToggleTargetFields.scss
@@ -12,8 +12,11 @@
 
   .targetFields {
     margin-bottom: 20px;
-    margin-left: 20px;
-    width: 50%;
+    width: 45%;
+
+    .fieldBox {
+      width: 100%;
+    }
   }
 }
 
