--- a/src/components/Forms/ProviderSettingsForm/ToggleTextarea/ToggleTextarea.scss
+++ b/src/components/Forms/ProviderSettingsForm/ToggleTextarea/ToggleTextarea.scss
@@ -27,9 +27,8 @@
   }
 
   .fieldInputBox {
-    margin-left: 20px;
     min-height: 100px;
-    width: 50%;
+    width: 45%;
   }
 }
 
